<resources>
    <string name="app_name">URDA</string>
    <string name="NewAccount">¿Todavía no tienes una cuenta?</string>
    <string name="TeGustaria">¿Tienes más tips sobre cómo reducir el consumo de agua?</string>
    <string name="log_in"> Iniciar Sesión  </string>
    <string name="contactanos">Contáctanos</string>
    <string name="password">Contraseña</string>
    <string name="mail">Correo electrónico</string>
    <string name="user">Usuario</string>
    <string name="name">Nombre</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="btnGoogle">INICIAR SESIÓN CON GOOGLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="About">Acerca de la aplicación</string>
    <string name="AboutUs2">Uso Responsable Del Agua (URDA) es una aplicación que busca concientizar acerca del uso responsable de un recurso tan vital como lo es el agua. Por medio de diversos tips y un contador que permita registrar la cantidad de agua que una persona gasta en sus actividades diarias, URDA espera que todos puedan aprender a consumir de manera responsable el agua.</string>
    <string name="filter_restaurant_title">Filtra tu Restaurante</string>
    <string name="About3">¿Quiénes somos?</string>
    <string name="Contactanos">mis.proyectos.universitarios.api@gmail.com</string>
    <string name="WaterQuote">"Miles de personas han sobrevivido sin amor, ninguna sin agua" -W.H.Auden</string>
    <string name="WaterQuote1">Olvidamos que el ciclo del agua y el ciclo de la vida son uno mismo  -Jacques Y.Cousteau</string>
    <string name="Timer">Contador de consumo de agua</string>
    <string name="History">Historial de consumo de agua</string>
    <string name="Tips">Tips para la reducción de consumo de agua</string>
    <string name="instructions">Cuando enciendas el grifo, inicia el cronómetro, y detenlo cuando cierres el grifo. Si vas a utiliza el grifo en lapsos cortos (abriendo y cerrando continuamente), páusalo cada vez que lo cierres y detenlo una vez termines de utilizarlo.</string>
    <string name="Aguagt">A abundancia de contaminación falta de agua</string>
    <string name="datos1"> Al año, se producen 97 mil millones de metros cúbicos de agua, de la cual únicamente se utiiza el 10% ya que el resto se encuentra contaminado.</string>
    <string name="datos2">Guatemala cuenta con agua abundante para satisfacer las necesidades básicas de las personas, el ambiente y la productividad económica. Una persona, en promedio, debería de gastar al rededor de 150 litros de agua al día, sin embargo, los estudios han demostrados, que solo en el área metropolitana, se utilizan hasta 400 litros por persona</string>
    <string name="datos3">Guatemala es un país que cuenta con abundancia de agua, sin embargo la mayoría de esta se encuentra contaminada gracias a la basura y las aguas residuales que se desechan en las fuentes hídricas.</string>
</resources>
