<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".newAccount.newAccountFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.foodforme.newAccount.NewAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical|center">


        <TextView
            android:id="@+id/contactanos_txt"
            style="@style/ClickableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/contactanos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_img"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <ImageView
            android:id="@+id/password_img"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:src="@mipmap/ic_lock"
            app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
            app:layout_constraintEnd_toStartOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtEmail"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mail_img"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" />

        <ImageView
            android:id="@+id/mail_img"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:src="@mipmap/ic_mail"
            app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtUser"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:text="@={viewModel.userv}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_img"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:src="@mipmap/ic_silhouette"
            app:layout_constraintBottom_toBottomOf="@+id/txtUser"
            app:layout_constraintEnd_toStartOf="@+id/txtUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtUser" />

        <ImageView
            android:id="@+id/name_img"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_identification"
            app:layout_constraintBottom_toBottomOf="@+id/txtName"
            app:layout_constraintEnd_toStartOf="@+id/txtName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtName" />

        <EditText
            android:id="@+id/txtName"
            style="@style/NormalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@={viewModel.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_img"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/add_info_txt"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/advent_pro"
            android:gravity="center"
            android:text="@string/TeGustaria"
            app:layout_constraintBottom_toTopOf="@+id/contactanos_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_text"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNewaccount"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            app:layout_constraintBottom_toTopOf="@+id/add_info_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>