<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurants.restaurantFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


        <ScrollView
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:background="@color/agua_mundo_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="272dp"
                    android:layout_height="129dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/amaranth"
                    android:gravity="center"
                    android:text="@string/Aguagt"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="246dp"
                    android:layout_height="304dp"
                    android:layout_marginTop="52dp"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/advent_pro"
                    android:gravity="center|center_horizontal"
                    android:text="@string/datos3"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="397dp"
                    android:layout_height="243dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/ic_launcher_background"
                    android:fontFamily="@font/advent_pro"
                    android:gravity="center"
                    android:text="@string/datos2"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="158dp"
                    android:layout_height="153dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/br_blue"
                    android:src="@mipmap/beber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.115"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="154dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:background="@drawable/br_blue"
                    android:src="@mipmap/riego"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="145dp"
                    android:layout_height="142dp"
                    android:layout_marginTop="16dp"
                    android:rotation="-20"
                    android:src="@mipmap/bandera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="143dp"
                    android:layout_height="143dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="150dp"
                    android:src="@mipmap/basura"
                    app:layout_constraintBottom_toBottomOf="@+id/textView17"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="145dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/aguas_residuales"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>